# claude-manager

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  build.sh  clean.sh  pyproject.toml  scripts.py
.github/workflows/: ci.yml  release.yml
src/claude_manager/: __init__.py  cli.py  config.py  models.py  simple_ui.py  tui.py  ui.py  ui_helpers.py  utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_integration.py  test_models.py
